payload/force-app/main/default/objects/Payload_Operation__c/Payload_Operation__c.object-meta.xml
<CustomObject>
    <label>Payload Operation</label>
    <nameField>
        <label>Payload Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payload Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>