payload/force-app/main/default/objects/Payload_Operation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active status of payload operation</description>
    <inlineHelpText>Active status of payload operation</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>