payload/force-app/main/default/objects/Payload_Operation__c/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <description>(Optional) Certificate to use in the HTTP callout - Specify even if using name credentials with a certificate</description>
    <inlineHelpText>(Optional) Certificate to use in the HTTP callout - Specify even if using name credentials with a certificate</inlineHelpText>
    <label>Certificate Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>