payload/force-app/main/default/objects/Payload_Operation__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <defaultValue>"Both"</defaultValue>
    <description>Controls whether this operation is used for inbound JSON, outbound JSON, or both.</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
            <value><fullName>Outbound</fullName><default>false</default><label>Outbound</label></value>
            <value><fullName>Both</fullName><default>true</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>