payload/force-app/main/default/objects/Payload_Operation__c/fields/Http_Headers__c.field-meta.xml
<CustomField>
    <fullName>Http_Headers__c</fullName>
    <defaultValue>&quot;Accept: application/json&quot; &amp; BR() &amp; &quot;Content-Type:application/json&quot;</defaultValue>
    <description>Header attributes - common use-cases set as default:
Accept: application/json
Content-Type:application/json</description>
    <inlineHelpText>Header attributes, name/value per line, i.e.:
Accept: application/json
Content-Type:application/json
Authorization : Bearer &lt;token&gt;</inlineHelpText>
    <label>Http Headers</label>
    <length>50048</length>
    <type>LongTextArea</type>
</CustomField>