payload/force-app/main/default/objects/Payload_Operation__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>HTTP Method to define verb of the Callout</description>
    <inlineHelpText>HTTP Method to define verb of the Callout</inlineHelpText>
    <label>Http Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
                <isActive>false</isActive>
                <label>DEL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>