payload/force-app/main/default/objects/Payload_Operation__c/fields/Http_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Http_Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>Timeout value for HttpRequest setTimeout() method</description>
    <inlineHelpText>Timeout value for HttpRequest setTimeout() method</inlineHelpText>
    <label>Http Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>