payload/force-app/main/default/objects/Payload_Operation__c/fields/Is_Mock__c.field-meta.xml
<CustomField>
    <fullName>Is_Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mock</label>
    <type>Checkbox</type>
</CustomField>