payload/force-app/main/default/objects/Payload_Operation__c/fields/Mock_Class__c.field-meta.xml
<CustomField>
    <fullName>Mock_Class__c</fullName>
    <label>Mock Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>