payload/force-app/main/default/objects/Payload_Operation__c/fields/Response_Mode__c.field-meta.xml
<CustomField>
    <fullName>Response_Mode__c</fullName>
    <defaultValue>"Ignore"</defaultValue>
    <description>Controls whether a returned payload is ignored, used to update matched records, or used to update and insert unmatched records.</description>
    <label>Response Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ignore</fullName><default>true</default><label>Ignore</label></value>
            <value><fullName>Update</fullName><default>false</default><label>Update</label></value>
            <value><fullName>Upsert</fullName><default>false</default><label>Upsert</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>