payload/force-app/main/default/objects/Payload_Operation__c/fields/URL_Base__c.field-meta.xml
<CustomField>
    <fullName>URL_Base__c</fullName>
    <description>The base url/server url - use callout:[...named-cred-api-name...] whenever possible</description>
    <inlineHelpText>The base url/server url - use callout:[...named-cred-api-name...] whenever possible</inlineHelpText>
    <label>URL Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>