payload/force-app/main/default/objects/Payload_Operation__c/fields/URL_Format__c.field-meta.xml
<CustomField>
    <fullName>URL_Format__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, endpoint is formatted by replacing all placeholders with dynamic parameters
i.e. https://abc.com/service/merge/{0}/{1} will be converted to https://abc.com/service/merge/c1/c2</description>
    <inlineHelpText>If checked, endpoint is formatted by replacing all placeholders with dynamic parameters
i.e. https://abc.com/service/merge/{0}/{1} will be converted to https://abc.com/service/merge/c1/c2</inlineHelpText>
    <label>URL Format</label>
    <type>Checkbox</type>
</CustomField>