payload/force-app/main/default/objects/Payload_Operation__c/fields/URL_Path__c.field-meta.xml
<CustomField>
    <fullName>URL_Path__c</fullName>
    <description>The relative URL Path from the specified Base - leave empty if using named-credentials</description>
    <inlineHelpText>The relative URL Path from the specified Base - leave empty if using named-credentials</inlineHelpText>
    <label>URL Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>